--- a/exercicios/ex024/iframe002.html
+++ b/exercicios/ex024/iframe002.html
@@ -16,7 +16,7 @@
     <h1>Teste com iframe</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi velit quo et, autem iusto, quidem unde dolores illum excepturi tempore magni magnam? Est nihil facere error impedit aut maiores ipsam.</p>
 
-    <iframe src="paginas-extras/pag001.html" frameborder="0" width="900px" height="500px">
+    <iframe src="paginas-extras/pag001.html" frameborder="0" width="900px" referrerpolicy="no-referrer">
         <p>Infelizmente seu computador não é compatível com isso</p>
     </iframe>
 
