--- a/exercicios/ex025/form007.html
+++ b/exercicios/ex025/form007.html
@@ -26,10 +26,10 @@
         </p>
 
         <p>
-            <!--Não ta funcionandao-->
+        
             <label for="iprof">Profissão</label>
             <input type="text" name="prof" id="iprof" lista="lstprof">
-            <datalist lista="lstprof"> 
+            <datalist id="lstprof"> 
                 <option >Administrador</option>
                 <option >Bombeiro</option>
                 <option >Contador</option>
@@ -37,7 +37,8 @@
         </p>
         <p>
             <label for="imsg">Mensagem: </label> <br>
-            <textarea name="mssg" id="imsg" cols="30" rows="10"></textarea>
+            <textarea name="msg" id="imsg" cols="30" rows="10"></textarea>
+            
         </p>
         <p>
             <input type="submit" value="Enviar">
